fix: getFeelings not adding BREAKING CHANGE: process.dlopen
